--- a/views/about.ejs
+++ b/views/about.ejs
@@ -11,7 +11,7 @@
           <div class="navbar-header"></div>
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li><img id="main-logo" class="img-rounded img-responsive" src="images/favicon.png"/></li>
+              <!-- <li><img id="main-logo" class="img-rounded img-responsive" src="images/favicon.png"/></li> -->
             </ul>
             <ul class="nav navbar-nav navbar-center">
               <li><h3>About GeoBoost2</h3></li>
@@ -23,7 +23,7 @@
   <body>
     <div ng-controller="aboutController" id="about" class="container">
       <div class="row">
-        <h3>GeoBoost2</h3>
+        <!-- <h3>GeoBoost2</h3> -->
         <h4>GeoBoost2 is a public health informatics application for finding the location of infected hosts for the purposes of phylogeography and epidemiology. 
             It uses state-of-the-art natural language processing (NLP) methods to extract and disambiguate geographical locations from scientific articles.
         </h4>
@@ -45,7 +45,10 @@
       <div class="row">
         <h3>Citations:</h3>
         <ul>
-            <li>Arjun Magge, Davy Weissenbacher, Abeed Sarker, Matthew Scotch, and Graciela Gonzalez-Hernandez. "Bi-directional Recurrent Neural Network Models for Geographic Location Extraction in Biomedical Literature."
+          <li>Arjun Magge, Davy Weissenbacher, Karen O’Connor, Tasnia Tahsin, Graciela Gonzalez-Hernandez, Matthew Scotch, "GeoBoost2: A Natural Language Processing Pipeline for GenBank Metadata Enrichment for Virus Phylogeography."
+              Bioinformatics, btaa647, (2020): https://doi.org/10.1093/bioinformatics/btaa647
+          </li>
+          <li>Arjun Magge, Davy Weissenbacher, Abeed Sarker, Matthew Scotch, and Graciela Gonzalez-Hernandez. "Bi-directional Recurrent Neural Network Models for Geographic Location Extraction in Biomedical Literature."
                 in Proceedings of Pacific Symposium of Biocomputing, World Scientific, 2019.
             </li>
             <li>Arjun Magge, Davy Weissenbacher, Abeed Sarker, Matthew Scotch, and Graciela Gonzalez-Hernandez. "Deep neural networks and distant supervision for geographic location mention extraction." 
